{
    "name": "InputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "bc832d58-2bfa-4b32-8f41-6e21809f760a",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "da47ba8a-8311-47a6-8c5d-8881ffad633f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "b7554342-ee0a-4457-8e91-2465f01fe514",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0d0353e2-9d90-4dcf-b0e3-e844bee55429",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65d2e0af-551d-4736-b818-0e08933b1cf6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}